--- a/src/components/category-item/category-item.styles.scss
+++ b/src/components/category-item/category-item.styles.scss
@@ -61,6 +61,7 @@
         font-weight: bold;
         margin: 0 6px 0;
         font-size: 22px;
+        font-weight: 500;
         color: #772464;
         color: #4a4a4a;
         text-align: center;
