--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,9 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Poppins', sans-serif;
+  // font-family: 'Poppins', sans-serif;
+  font-family: 'Lora', serif;
+  font-family: 'IBM Plex Serif', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background-color: #285A4D;; */
