--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -1,5 +1,5 @@
 .button-container {
-    min-width: 165px;
+    min-width: 200px;
     width: auto;
     height: 50px;
     letter-spacing: 0.5px;
@@ -7,6 +7,8 @@
     padding: 0 35px 0 35px;
     font-size: 15px;
     background-color: black;
+    background-color: #78635F;
+    background-color: #785448;
     color: white;
     text-transform: uppercase;
     font-family: 'Open Sans Condensed';
@@ -15,6 +17,7 @@
     cursor: pointer;
     display: flex;
     justify-content: center;
+    font-weight: 300;
   
     &:hover {
       background-color: white;
@@ -24,10 +27,14 @@
   
     &.google-sign-in {
       background-color: #4285f4;
+      background-color: #78635F;
+      background-color: #4285F4;
+      background-color: #A53501;
       color: white;
   
       &:hover {
         background-color: #357ae8;
+        background: #78635F;
         border: none;
       }
     }
