--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -11,17 +11,34 @@
   border: 1px solid #eeeeee;
   padding: 30px;
 
-  // @media (min-width: 56rem) {
-  //     .product-card-container {
-  //       width: 33.3333%;
-  //     }
-  //   }
+// button {
 
+  &:hover {
+    cursor: pointer;
+
+    & .background-image {
+      transform: scale(1.1);
+      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+    }
+
+    & .category-body-container {
+      opacity: 0.9;
+    }
+  // }
+
+}
   .product-card-header {
     width: 90%;
     // padding: 20px 0;
     display: flex;
     justify-content: space-between;
+
+
+    .heart-btn {
+      border: none;
+      background: none;
+      cursor: pointer;
+    }
 
     img {
       width: 22px;
