--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -1,6 +1,8 @@
-.product-card-container {
-  // max-width: 300px;
+button {
+  background: none;
+}
 
+.product-card-container {
   min-height: 470px;
   display: flex;
   flex-direction: column;
@@ -11,7 +13,7 @@
   border: 1px solid #eeeeee;
   padding: 30px;
 
-// button {
+
 
   &:hover {
     cursor: pointer;
@@ -24,15 +26,12 @@
     & .category-body-container {
       opacity: 0.9;
     }
-  // }
-
-}
+    // }
+  }
   .product-card-header {
     width: 90%;
-    // padding: 20px 0;
     display: flex;
     justify-content: space-between;
-
 
     .heart-btn {
       border: none;
@@ -108,40 +107,4 @@
       }
     }
   }
-
-  //   button {
-  //     width: 80%;
-  //     opacity: 0.7;
-  //     position: absolute;
-  //     top: 255px;
-  //     display: none;
-  //   }
-
-  //   &:hover {
-  //     img {
-  //       opacity: 0.8;
-  //     }
-
-  //     button {
-  //       opacity: 0.85;
-  //       display: flex;
-  //     }
-  //   }
-
-  //   .footer {
-  //     width: 100%;
-  //     height: 5%;
-  //     display: flex;
-  //     justify-content: space-between;
-  //     font-size: 18px;
-
-  //     .name {
-  //       width: 90%;
-  //       margin-bottom: 15px;
-  //     }
-
-  //     .price {
-  //       width: 10%;
-  //     }
-  //   }
 }
