--- a/src/routes/curious-tea/curious -tea.styles.scss
+++ b/src/routes/curious-tea/curious -tea.styles.scss
@@ -17,7 +17,7 @@
       margin-bottom: 3rem;
     }
   
-    .classic-page-bg {
+    .delicious-page-bg {
       height: 20rem;
       background-position: center;
       background-size: cover;
