--- a/src/components/shopping-cart-dropdown/shopping-cart-dropdown.styles.scss
+++ b/src/components/shopping-cart-dropdown/shopping-cart-dropdown.styles.scss
@@ -1,7 +1,7 @@
 .cart-dropdown-container {
   position: absolute;
   width: 240px;
-  height: 259px;
+  height: 249px;
   display: flex;
   flex-direction: column;
   padding: 20px;
@@ -25,6 +25,9 @@
 
   button {
     margin-top: auto;
+  }
+  .cart-dropdown-total {
+    align-self: flex-end;
   }
 }
 
