--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -13,8 +13,6 @@ button {
   border: 1px solid #eeeeee;
   padding: 30px;
 
-
-
   &:hover {
     cursor: pointer;
 
@@ -53,12 +51,52 @@ button {
   .product-card-main {
     color: #27160e;
 
-    img {
-      width: 50%;
-      height: 50%;
-      //   object-fit: cover;
-      margin-bottom: 5px;
+    .img-anime-container {
+      width: 180px;
+      height: 180px;
+      position: relative;
+      margin: 30px;
+      margin: auto;
+
+      .img1,
+      .img2 {
+        // width: 100%;
+        // height: 100%;
+        border-radius: 50%;
+        // margin: 0;
+
+        // margin-bottom: 5px;
+      }
+
+      .img1 {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        // opacity: 0.7;
+      }
+      .img2 {
+        z-index: 9;
+        // margin: 30px;
+        width: 100%;
+        height: 100%;
+        // background: red;
+
+        // animation: diagonal-move-anim 3s linear infinite alternate;
+      }
+
+      @keyframes diagonal-move-anim {
+        0% {
+          transform: translate(0, 0);
+        }
+
+        100% {
+          transform: translate(150px, -220px);
+        }
+      }
     }
+
     h2 {
       // color: #27160E;
       font-weight: 300;
