--- a/src/components/shopping-cart-dropdown/shopping-cart-dropdown.styles.scss
+++ b/src/components/shopping-cart-dropdown/shopping-cart-dropdown.styles.scss
@@ -1,7 +1,7 @@
 .cart-dropdown-container {
   position: absolute;
   width: 240px;
-  height: 249px;
+  height: 260px;
   display: flex;
   flex-direction: column;
   padding: 20px;
@@ -21,10 +21,11 @@
     display: flex;
     flex-direction: column;
     overflow: scroll;
+    margin-bottom: 20px;
   }
 
   button {
-    margin-top: auto;
+    margin-top: 20px;
   }
   .cart-dropdown-total {
     align-self: flex-end;
