--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -50,9 +50,14 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 2rem;
+    background: pink;
 
     & {
       color: #543019;
+    }
+
+    .mobile_btn {
+      display: none;
     }
 
     .bottom-level-navigation-left {
@@ -75,6 +80,11 @@
         padding-left: 2rem;
       }
     }
+
+    .bottom-level-navigation-right-with-heart,
+    .bottom-level-navigation-right-with-bag {
+      display: none;
+    }
   }
 
   .logo-container {
@@ -92,6 +102,59 @@
 
     .app-icon {
       padding-left: 1rem;
+    }
+  }
+}
+
+// Mobile
+
+@media screen and (max-width: 1024px) {
+  .navigation {
+    .top-level-navigation {
+      display: none;
+    }
+
+    padding: 0;
+
+    .bottom-level-navigation {
+      background: red;
+
+      // height: 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0;
+
+      .bottom-level-navigation-left {
+        display: none;
+      }
+
+      .bottom-level-navigation-right {
+        display: none;
+      }
+      .bottom-level-navigation-right-with-heart,
+      .bottom-level-navigation-right-with-bag {
+   display: block;
+        img {
+          width: 21px;
+        }
+      }
+
+      .logo-container {
+        margin-top: 0.3rem;
+        padding-left: 38%;
+      }
+
+    
+
+      .mobile_btn {
+        display: block;
+        position: absolute;
+        left: 1rem;
+        cursor: pointer;
+        z-index: 10;
+        position: fixed;
+      }
     }
   }
 }
