--- a/src/components/favorite-icon/favorite-icon.styles.scss
+++ b/src/components/favorite-icon/favorite-icon.styles.scss
@@ -15,3 +15,13 @@
    
   }
 }
+
+@media screen and (max-width: 1024px) {
+  .heart-container {
+
+    .item-count {
+      bottom: 17px;
+      font-size: 10px;
+    }
+  }
+}
