--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -50,7 +50,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 2rem;
-    background: pink;
+    // background: pink;
 
     & {
       color: #543019;
@@ -81,8 +81,9 @@
       }
     }
 
-    .bottom-level-navigation-right-with-heart,
-    .bottom-level-navigation-right-with-bag {
+    // .bottom-level-navigation-right-with-heart,
+    // .bottom-level-navigation-right-with-bag
+    .bottom-level-navigation-right-with-heart-and-bag {
       display: none;
     }
   }
@@ -117,7 +118,7 @@
     padding: 0;
 
     .bottom-level-navigation {
-      background: red;
+      // background: red;
 
       // height: 0;
       display: flex;
@@ -132,25 +133,32 @@
       .bottom-level-navigation-right {
         display: none;
       }
-      .bottom-level-navigation-right-with-heart,
-      .bottom-level-navigation-right-with-bag {
-   display: block;
+      // .bottom-level-navigation-right-with-heart,
+      // .bottom-level-navigation-right-with-bag
+      .bottom-level-navigation-right-with-heart-and-bag {
+        display: flex;
         img {
           width: 21px;
         }
       }
 
-      .logo-container {
-        margin-top: 0.3rem;
-        padding-left: 38%;
+      .bottom-level-navigation-right-with-heart-and-bag :nth-child(1) {
+        margin-top: 1.5px;
       }
 
-    
+      .bottom-level-navigation-right-with-heart {
+        background: pink;
+      }
+
+      .logo-container {
+        margin-top: 0.3rem;
+        padding-left: 30%;
+      }
 
       .mobile_btn {
         display: block;
         position: absolute;
-        left: 1rem;
+        // left: 1rem;
         cursor: pointer;
         z-index: 10;
         position: fixed;
