create Your cart

--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -135,7 +135,7 @@ button {
 
     button {
       background-color: #47160e;
-      //   background-color: #78635F;
+      background: #785448;
       border: none;
       cursor: pointer;
 
