--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -1,54 +1,54 @@
 .button-container {
-    min-width: 200px;
-    width: auto;
-    height: 50px;
-    letter-spacing: 0.5px;
-    line-height: 50px;
-    padding: 0 35px 0 35px;
-    font-size: 15px;
-    background-color: black;
-    background-color: #78635F;
-    background-color: #785448;
+  min-width: 200px;
+  width: auto;
+  height: 50px;
+  letter-spacing: 0.5px;
+  line-height: 50px;
+  padding: 0 35px 0 35px;
+  font-size: 15px;
+  background-color: black;
+  background-color: #78635f;
+  background-color: #785448;
+  color: white;
+  text-transform: uppercase;
+  font-family: 'Open Sans Condensed';
+  font-family: 'Lora', serif;
+  font-weight: bolder;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  font-weight: 400;
+
+  &:hover {
+    background-color: white;
+    color: rgb(84, 48, 25);
+    border: 1px solid #785448;
+  }
+
+  &.google-sign-in {
+    background-color: #4285f4;
+    background-color: #78635f;
+    background-color: #4285f4;
+    background-color: #a53501;
     color: white;
-    text-transform: uppercase;
-    font-family: 'Open Sans Condensed';
-    font-weight: bolder;
-    border: none;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    font-weight: 300;
-  
+
     &:hover {
-      background-color: white;
-      color: black;
-      border: 1px solid black;
-    }
-  
-    &.google-sign-in {
-      background-color: #4285f4;
-      background-color: #78635F;
-      background-color: #4285F4;
-      background-color: #A53501;
-      color: white;
-  
-      &:hover {
-        background-color: #357ae8;
-        background: #78635F;
-        border: none;
-      }
-    }
-  
-    &.inverted {
-      background-color: white;
-      color: black;
-      border: 1px solid black;
-  
-      &:hover {
-        background-color: black;
-        color: white;
-        border: none;
-      }
+      background-color: #357ae8;
+      background: #78635f;
+      border: none;
     }
   }
-  
+
+  &.inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+
+    &:hover {
+      background-color: black;
+      color: white;
+      border: none;
+    }
+  }
+}
