--- a/src/components/checkout/checkout.styles.scss
+++ b/src/components/checkout/checkout.styles.scss
@@ -30,10 +30,10 @@
       }
 
       .checkout-process-container {
-        .checkout-process-subtotal {
-          // padding-left: 2rem;
+        img {
+          opacity: 0.5;
         }
-        
+
         button {
           width: 100%;
           height: 50px;
@@ -69,8 +69,7 @@
 
           &:hover,
           &:active,
-          &:focus
-          {
+          &:focus {
             background-color: white;
             color: rgb(84, 48, 25);
             border: 1px solid #785448;
