--- a/src/components/checkout/checkout.styles.scss
+++ b/src/components/checkout/checkout.styles.scss
@@ -34,9 +34,9 @@
           opacity: 0.5;
         }
 
-        button {
-          width: 100%;
-          height: 50px;
+        a {
+          width: 87%;
+          height: 52px;
           letter-spacing: 0.5px;
           line-height: 50px;
           padding: 0 25px;
