add carousel with fade effect on the home page

--- a/src/components/filter/filter.styles.scss
+++ b/src/components/filter/filter.styles.scss
@@ -1,6 +1,7 @@
 .tea-selectors-btn {
   // text-align: left;
   display: flex;
+  margin-top: 5rem;
 
   justify-content: left;
   justify-content: center;
