--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -124,7 +124,7 @@ button {
 
     button {
       background-color: #47160e;
-      background: #785448;
+      // background: #785448;
       border: none;
       cursor: pointer;
 
