--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,10 @@
-body {
+*,
+::before,
+::after {
   margin: 0;
   padding: 0;
-  // font-family: 'Poppins', sans-serif;
-  font-family: 'Lora', serif;
+  // box-sizing: border-box;
   font-family: 'IBM Plex Serif', serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  /* background-color: #285A4D;; */
-
 }
 
 code {
