--- a/src/routes/picked-tea/picked-tea.styles.scss
+++ b/src/routes/picked-tea/picked-tea.styles.scss
@@ -1,8 +1,9 @@
 .picked-tea {
   text-align: center;
-  margin: 0 2rem;
+  margin: 10rem 2rem;
 
   h2 {
+    margin-bottom: 6rem;
     font-size: 2.5rem;
     font-weight: 300;
     text-align: center;
