--- a/src/components/carousel-container/carousel-container.styles.scss
+++ b/src/components/carousel-container/carousel-container.styles.scss
@@ -11,5 +11,35 @@
     overflow: hidden;
     width: 100%;
     height: 100%;
+
+    .carousel-img {
+      position: relative;
+      text-align: center;
+      color: white;
+    }
+
+    h1 {
+      position: absolute;
+      top: 30%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      font-size: 3.7rem;
+      letter-spacing: 1px;
+      font-weight: 300;
+      font-family: 'IBM Plex Serif', serif;
+    }
+
+    p {
+      position: absolute;
+      top: 45%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      font-size: 1.7rem;
+      letter-spacing: 1px;
+      font-weight: 200;
+      font-family: 'IBM Plex Serif', serif;
+    }
   }
 }
