--- a/src/components/carousel-container/carousel-container.styles.scss
+++ b/src/components/carousel-container/carousel-container.styles.scss
@@ -1,5 +1,5 @@
 .img-carousel-bg-container {
-  margin: 10rem 2rem;
+  margin: 10rem 2rem 6rem 2rem;
   height: 38rem;
   // background: #0a2a4a;
   display: flex;
@@ -29,6 +29,36 @@
       font-weight: 300;
       font-family: 'IBM Plex Serif', serif;
     }
+
+    span {
+      content: '';
+      display: block;
+      width: 120px;
+      height: 2px;
+      background: white;
+    }
+
+    // h1:before {
+    //   content: "";
+    //   display: block;
+    //   width: 120px;
+    //   height: 2px;
+    //   background: white;
+    //   left: 0;
+    //   top: 50%;
+    //   position: absolute;
+    // }
+
+    // h1:after {
+    //   content: "";
+    //   display: block;
+    //   width: 120px;
+    //   height: 2px;
+    //   background: white;
+    //   right: 0;
+    //   top: 50%;
+    //   position: absolute;
+    // }
 
     p {
       position: absolute;
