--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -13,12 +13,15 @@ footer {
     font-weight: 300;
     text-align: left;
     color: #27160e;
-    padding-left: 2rem;
     line-height: 1.1;
+    padding: 2.6rem 0;
   }
 
   li {
     list-style-type: none;
+    color: #27160E;
+    font-weight: 300;
+    font-size: 13.5px;
   }
 
   li:hover {
