--- a/src/components/slide-show-hover/slide-show-hover.styles.scss
+++ b/src/components/slide-show-hover/slide-show-hover.styles.scss
@@ -26,7 +26,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: black;
-    color: #543019;
+    // color: #543019;
     font-size: 2.5rem;
     letter-spacing: 1px;
     font-weight: 300;
