--- a/src/components/carousel-container/carousel-container.styles.scss
+++ b/src/components/carousel-container/carousel-container.styles.scss
@@ -18,47 +18,31 @@
       color: white;
     }
 
-    h1 {
+    .h1-container {
       position: absolute;
       top: 30%;
       left: 50%;
       transform: translate(-50%, -50%);
-      color: white;
+
       font-size: 3.7rem;
       letter-spacing: 1px;
       font-weight: 300;
       font-family: 'IBM Plex Serif', serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      h1 {
+        color: white;
+        padding: 0 3rem;
+      }
+
+      .line {
+        height: 1.4px;
+        width: 10rem;
+        background-color: white;
+      }
     }
-
-    span {
-      content: '';
-      display: block;
-      width: 120px;
-      height: 2px;
-      background: white;
-    }
-
-    // h1:before {
-    //   content: "";
-    //   display: block;
-    //   width: 120px;
-    //   height: 2px;
-    //   background: white;
-    //   left: 0;
-    //   top: 50%;
-    //   position: absolute;
-    // }
-
-    // h1:after {
-    //   content: "";
-    //   display: block;
-    //   width: 120px;
-    //   height: 2px;
-    //   background: white;
-    //   right: 0;
-    //   top: 50%;
-    //   position: absolute;
-    // }
 
     p {
       position: absolute;
@@ -68,7 +52,7 @@
       color: white;
       font-size: 1.7rem;
       letter-spacing: 1px;
-      font-weight: 200;
+      font-weight: 300;
       font-family: 'IBM Plex Serif', serif;
     }
   }
