--- a/src/components/checkout/checkout.styles.scss
+++ b/src/components/checkout/checkout.styles.scss
@@ -2,6 +2,7 @@
   margin-top: 5rem;
 
   h2 {
+    margin: 5rem 0;
     font-size: 2.5rem;
     font-weight: 300;
     text-align: center;
@@ -14,6 +15,14 @@
     grid-template-columns: 2fr 1fr;
     column-gap: 5%;
     margin-right: 2rem;
+
+    .checkout-bag-empty-bg {
+      height: 500px;
+      width: 500px;
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
 
     .checkout-process {
       padding: 2.5rem;
@@ -103,6 +112,38 @@
 
     .cart-items {
       border-bottom: 1px solid rgb(225, 225, 225);
+    }
+  }
+
+  .checkout-bag-container-empty {
+    display: flex;
+    justify-content: center;
+    // align-items: center;
+
+    .checkout-bag-empty-bg {
+      height: 300px;
+      width: 300px;
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+
+    button {
+      border: none;
+      background: #552f1c;
+      color: white;
+      font-family: 'IBM Plex Serif', serif;
+      letter-spacing: 2px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 20px 35px 20px 35px;
+      font-size: 13px;
+      text-transform: uppercase;
+      border: none;
+      cursor: pointer;
+      font-weight: 300;
+      font-family: 'Poppins', sans-serif;
     }
   }
 }
