--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -7,6 +7,8 @@ footer {
   letter-spacing: 0.8px;
   font-size: 14px;
   line-height: 2;
+  max-width: 1300px;
+  margin: auto;
 
   h3 {
     font-size: 2.1rem;
