--- a/src/routes/picked-tea/picked-tea.styles.scss
+++ b/src/routes/picked-tea/picked-tea.styles.scss
@@ -1,13 +1,33 @@
 .picked-tea {
+  max-width: 1300px;
   text-align: center;
-  margin: 10rem 2rem;
+  margin: 5rem auto;
 
-  h2 {
+  .picked-tea-title-container {
+    display: flex;
     margin-bottom: 6rem;
-    font-size: 2.5rem;
-    font-weight: 300;
-    text-align: center;
-    color: #27160e;
+    justify-content: center;
+    align-items: center;
+
+    .picked-tea-heart :nth-child(1) {
+      margin-top: 0.3rem;
+      width: 32.5px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    h2 {
+      font-size: 2.5rem;
+      font-weight: 300;
+      text-align: center;
+      color: #27160e;
+      margin-right: 1rem;
+    }
+
+    button {
+      border: none;
+    }
   }
 
   .picked-tea-container {
@@ -15,82 +35,84 @@
     grid-template-columns: 1fr 2fr;
     column-gap: 30px;
 
-    .slider-wrapper {
-      // background: red;
-    }
-
     .axis-horizontal {
       height: 30rem;
       width: 30rem;
     }
 
     .thumbs-wrapper {
-      // background: green;
       width: 80%;
       margin: auto;
       display: flex;
     }
 
     .control-arrow {
-      // background: green;
       display: none;
     }
 
     .carousel {
-      // background: red;
-
       .thumbs {
-        // background: red;
         display: flex;
 
         .thumb {
           display: flex;
           justify-content: center;
           align-items: center;
-          // background: yellow;
           height: 4.6rem;
         }
 
         .selected {
-          // background: green;
           border: 1px solid #d1cccc;
-          border: 1px solid #785448;
 
           img {
             height: 100%;
           }
         }
-
-        .previous {
-          background: blue;
-        }
-
-        .selected:hover {
-          // border: 1px solid #785448;
-        }
       }
     }
 
     .picked-tea-right-col {
-      // background: red;
       display: flex;
 
       .product-card-footer {
-        height: 100%;
-        width: 100%;
-        // background: red;
-        margin-top: 30px;
+        border: 1px solid #e1e1e1;
+        width: 300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
-        button {
+        .product-card-footer-price {
+          font-size: 2.5rem;
+          font-weight: 300;
+          margin-bottom: 3rem;
+        }
+
+        .bag-button {
+          border: none;
           background-color: #47160e;
-          // background: #785448;
           border: none;
           cursor: pointer;
+          width: 80%;
+          margin: 0 auto;
 
           img {
             width: 20px;
             padding: 18px 30px;
           }
+        }
+
+        .favorite-icon-private-container {
+          button {
+            margin-top: 3rem;
+            border: none;
+            padding: 18px 0;
+          }
+        }
+
+        .favorite-icon-private-container {
+          display: flex;
+          justify-content: center;
+          align-items: center;
         }
       }
 
@@ -100,8 +122,6 @@
         color: #544241;
         letter-spacing: 0.8px;
         font-size: 15px;
-        // background: blue;
-        // width: 100%;
 
         p {
           width: 85%;
@@ -113,6 +133,12 @@
         .picked-tea-consist {
           width: 100%;
 
+          h4 {
+            margin-top: 1rem;
+            font-weight: 200;
+            font-size: 18px;
+          }
+
           .picked-tea-consist-items {
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -122,7 +148,6 @@
               margin-top: 30px;
               width: 5rem;
               height: 5rem;
-              // background: green;
               display: flex;
               flex-direction: column;
               justify-content: center;
@@ -135,14 +160,19 @@
             }
           }
         }
-      }
-    }
 
-    .picked-tea-right-col :nth-child(1) {
-      width: 50%;
-    }
-    .picked-tea-right-col :nth-child(2) {
-      width: 50%;
+        .picked-tea-taste {
+          border-top: 1px solid #e1e1e1;
+          margin-top: 2rem;
+          width: 85%;
+
+          h4 {
+            margin-top: 1rem;
+            font-weight: 200;
+            font-size: 18px;
+          }
+        }
+      }
     }
   }
 }
