--- a/src/components/shopping-cart-item-order/shopping-cart-item-order.styles.scss
+++ b/src/components/shopping-cart-item-order/shopping-cart-item-order.styles.scss
@@ -1,6 +1,5 @@
 .cart-item-container-bag {
   border: 1px solid rgb(225, 225, 225);
-  border-bottom: none;
   line-height: 1.6;
   min-height: 220px;
   margin-left: 2rem;
@@ -10,6 +9,7 @@
   font-size: 12.2px;
   display: flex;
   flex-direction: column;
+  margin-bottom: 1rem;
 
   .cart-item-bag-close-container {
     align-self: flex-end;
@@ -28,7 +28,6 @@
     }
     align-self: flex-end;
     border: none;
-    cursor: pointer;
     &:hover {
       transform: scale(1.3);
     }
@@ -70,8 +69,10 @@
         margin-bottom: 1rem;
 
         button {
+          // background: red;
           border: none;
           cursor: pointer;
+          padding-left: 1rem;
           img {
             width: 23px;
           }
