--- a/src/routes/picked-tea/picked-tea.styles.scss
+++ b/src/routes/picked-tea/picked-tea.styles.scss
@@ -10,6 +10,7 @@
     align-items: center;
 
     .picked-tea-heart :nth-child(1) {
+      cursor: pointer;
       margin-top: 0.3rem;
       width: 32.5px;
       display: flex;
