--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -27,15 +27,16 @@
   }
 
   &.google-sign-in {
-    background-color: #4285f4;
-    background-color: #78635f;
-    background-color: #4285f4;
-    background-color: #a53501;
+    background-color: #532c12;
     color: white;
 
+    background-color: white;
+    color: black;
+    border: 1px solid #532c12;
+
     &:hover {
-      background-color: #357ae8;
-      background: #78635f;
+      background-color: #785448;
+      color: white;
       border: none;
     }
   }
@@ -49,6 +50,16 @@
       background-color: black;
       color: white;
       border: none;
+    }
+  }
+
+  &.wide {
+    width: 100%;
+
+    &:hover {
+      background-color: white;
+      color: black;
+      border: 1px solid #532c12;
     }
   }
 }
