--- a/src/components/sign-in-form/sign-in-form.styles.scss
+++ b/src/components/sign-in-form/sign-in-form.styles.scss
@@ -1,10 +1,14 @@
 .sign-in-container {
   display: flex;
   flex-direction: column;
-  width: 440px;
+  width: 420px;
+  margin: auto;
+  letter-spacing: 0.5px;
+  color: #532c12;
+  text-align: center;
 
   h2 {
-    margin: 10px 0;
+    margin: 0 0 10px 0;
   }
 
   .buttons-container {
