--- a/src/components/sign-up-form/sign-up-form.styles.scss
+++ b/src/components/sign-up-form/sign-up-form.styles.scss
@@ -1,9 +1,17 @@
-.sign-up-container{
-    display: flex;
-    flex-direction: column;
-    width: 380px;
+.sign-up-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 420px;
+  margin: auto;
+  color: #532c12;
+  text-align: center;
 
-    h2 {
-        margin: 10px 0;
-    }
+  h2 {
+    margin: 0 0 10px 0;
+  }
+
+  .form-input {
+    width: 420px;
+  }
 }
