--- a/src/routes/navigation/nav-desktop.styles.scss
+++ b/src/routes/navigation/nav-desktop.styles.scss
@@ -39,6 +39,10 @@
       display: flex;
       align-items: center;
 
+      .user-icon {
+        padding-top: 3.5px;
+      }
+
       img {
         padding-left: 2rem;
         width: 21px;
