--- a/src/routes/personal-account/personal-account.styles.scss
+++ b/src/routes/personal-account/personal-account.styles.scss
@@ -2,9 +2,21 @@
   max-width: 1300px;
   margin: 10rem;
   min-height: 25rem;
+  text-align: center;
 
   h2 {
     // text-align: center;
+    margin-bottom: 2rem;
+    color: #27160e;
+    font-weight: 300;
+    text-align: left;
+  }
+
+  h3 {
+    letter-spacing: 1.5px;
+    font-size: 20px;
+    font-weight: 300;
+    color: #27160e;
     margin-bottom: 2rem;
   }
 
@@ -27,7 +39,8 @@
         align-items: center;
         justify-content: center;
 
-        button, a {
+        button,
+        a {
           text-transform: uppercase;
           margin-bottom: 2rem;
           border: none;
@@ -36,7 +49,6 @@
           font-size: 14px;
           font-weight: 300;
           color: #27160e;
-
         }
       }
 
