--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -70,23 +70,92 @@ button {
         position: absolute;
         top: 0;
         left: 0;
+
+       
       }
+
       .img2 {
         z-index: 9;
         width: 100%;
         height: 100%;
       }
 
-      @keyframes diagonal-move-anim {
-        0% {
-          transform: translate(0, 0);
-        }
-
-        100% {
-          transform: translate(150px, -220px);
-        }
+      .slide-out-top {
+        -webkit-animation: slide-out-top 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+                animation: slide-out-top 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
       }
+
+
+
+@-webkit-keyframes slide-out-top {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateY(-1000px);
+            transform: translateY(-1000px);
+    opacity: 0;
+  }
+}
+
+
+
+@keyframes slide-out-top {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform:  translateY(-1000px);
+            transform: translateY(-1000px);
+    opacity: 0;
+  }
+}
+
+
+
+// .slide-out-bck-tr {
+// 	-webkit-animation: slide-out-bck-tr 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+// 	        animation: slide-out-bck-tr 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+// }
+
+
+
+
+//  @-webkit-keyframes slide-out-bck-tr {
+//   0% {
+//     -webkit-transform: translateZ(0) translateY(0) translateX(0);
+//             transform: translateZ(0) translateY(0) translateX(0);
+//     opacity: 1;
+//   }
+//   100% {
+//     -webkit-transform: translateZ(-1100px) translateY(-1000px) translateX(1000px);
+//             transform: translateZ(-1100px) translateY(-1000px) translateX(1000px);
+//     opacity: 0;
+//   }
+// }
+// @keyframes slide-out-bck-tr {
+//   0% {
+//     -webkit-transform: translateZ(0) translateY(0) translateX(0);
+//             transform: translateZ(0) translateY(0) translateX(0);
+//     opacity: 1;
+//   }
+//   100% {
+//     -webkit-transform: translateZ(-1100px) translateY(-1000px) translateX(1000px);
+//             transform: translateZ(-1100px) translateY(-1000px) translateX(1000px);
+//     opacity: 0;
+//   }
+// }
+
+    
+   
     }
+
+
+
 
     h2 {
       font-weight: 300;
