--- a/src/components/bonus-cards-section/bonus-cards-section.styles.scss
+++ b/src/components/bonus-cards-section/bonus-cards-section.styles.scss
@@ -25,15 +25,12 @@
     font-size: 13px;
     color: white;
     text-transform: uppercase;
-    // font-family: 'Lora', serif;
     font-weight: bolder;
     border: none;
     cursor: pointer;
     display: flex;
     justify-content: center;
     font-weight: 300;
-    // align-self: flex-end;
-    // margin-bottom: 5rem;
     font-family: 'Poppins', sans-serif;
 
     &:hover {
@@ -44,9 +41,7 @@
   }
 
   .action-section-text {
-    // border-top: 1px solid #e1e1e1;
     padding-left: 8rem;
-    // padding-top: 3.2rem;
     width: 50%;
     h2 {
       font-size: 2.5rem;
@@ -66,29 +61,29 @@
   }
 }
 
-.cardfan {
+.card-fan {
   height: 356px;
   width: 700px;
   //   margin: 2rem auto 0;
   position: relative;
   //   padding: 0 3rem;
 }
-.cardfan img {
+.card-fan img {
   position: absolute;
   left: 130px;
   top: -40px;
   transform-origin: center 400px;
   transition: all 0.6s linear;
 }
-.cardfan img:first-child {
+.card-fan img:first-child {
   transform: rotate(15deg);
 }
-.cardfan img:last-child {
+.card-fan img:last-child {
   transform: rotate(-15deg);
 }
-.cardfan:hover img:first-child {
+.card-fan:hover img:first-child {
   transform: rotate(20deg);
 }
-.cardfan:hover img:last-child {
+.card-fan:hover img:last-child {
   transform: rotate(-20deg);
 }
