--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -70,8 +70,6 @@ button {
         position: absolute;
         top: 0;
         left: 0;
-
-       
       }
 
       .img2 {
@@ -81,81 +79,67 @@ button {
       }
 
       .slide-out-top {
-        -webkit-animation: slide-out-top 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-                animation: slide-out-top 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+        -webkit-animation: slide-out-top 0.5s
+          cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+        animation: slide-out-top 0.5s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
       }
 
+      @-webkit-keyframes slide-out-top {
+        0% {
+          -webkit-transform: translateY(0);
+          transform: translateY(0);
+          opacity: 1;
+        }
+        100% {
+          -webkit-transform: translateY(-1000px);
+          transform: translateY(-1000px);
+          opacity: 0;
+        }
+      }
 
+      @keyframes slide-out-top {
+        0% {
+          -webkit-transform: translateY(0);
+          transform: translateY(0);
+          opacity: 1;
+        }
+        100% {
+          -webkit-transform: translateY(-1000px);
+          transform: translateY(-1000px);
+          opacity: 0;
+        }
+      }
 
-@-webkit-keyframes slide-out-top {
-  0% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: translateY(-1000px);
-            transform: translateY(-1000px);
-    opacity: 0;
-  }
-}
+      // .slide-out-bck-tr {
+      // 	-webkit-animation: slide-out-bck-tr 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+      // 	        animation: slide-out-bck-tr 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+      // }
 
-
-
-@keyframes slide-out-top {
-  0% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform:  translateY(-1000px);
-            transform: translateY(-1000px);
-    opacity: 0;
-  }
-}
-
-
-
-// .slide-out-bck-tr {
-// 	-webkit-animation: slide-out-bck-tr 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-// 	        animation: slide-out-bck-tr 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-// }
-
-
-
-
-//  @-webkit-keyframes slide-out-bck-tr {
-//   0% {
-//     -webkit-transform: translateZ(0) translateY(0) translateX(0);
-//             transform: translateZ(0) translateY(0) translateX(0);
-//     opacity: 1;
-//   }
-//   100% {
-//     -webkit-transform: translateZ(-1100px) translateY(-1000px) translateX(1000px);
-//             transform: translateZ(-1100px) translateY(-1000px) translateX(1000px);
-//     opacity: 0;
-//   }
-// }
-// @keyframes slide-out-bck-tr {
-//   0% {
-//     -webkit-transform: translateZ(0) translateY(0) translateX(0);
-//             transform: translateZ(0) translateY(0) translateX(0);
-//     opacity: 1;
-//   }
-//   100% {
-//     -webkit-transform: translateZ(-1100px) translateY(-1000px) translateX(1000px);
-//             transform: translateZ(-1100px) translateY(-1000px) translateX(1000px);
-//     opacity: 0;
-//   }
-// }
-
-    
-   
+      //  @-webkit-keyframes slide-out-bck-tr {
+      //   0% {
+      //     -webkit-transform: translateZ(0) translateY(0) translateX(0);
+      //             transform: translateZ(0) translateY(0) translateX(0);
+      //     opacity: 1;
+      //   }
+      //   100% {
+      //     -webkit-transform: translateZ(-1100px) translateY(-1000px) translateX(1000px);
+      //             transform: translateZ(-1100px) translateY(-1000px) translateX(1000px);
+      //     opacity: 0;
+      //   }
+      // }
+      // @keyframes slide-out-bck-tr {
+      //   0% {
+      //     -webkit-transform: translateZ(0) translateY(0) translateX(0);
+      //             transform: translateZ(0) translateY(0) translateX(0);
+      //     opacity: 1;
+      //   }
+      //   100% {
+      //     -webkit-transform: translateZ(-1100px) translateY(-1000px) translateX(1000px);
+      //             transform: translateZ(-1100px) translateY(-1000px) translateX(1000px);
+      //     opacity: 0;
+      //   }
+      // }
     }
-
-
-
 
     h2 {
       font-weight: 300;
@@ -195,7 +179,6 @@ button {
 
     button {
       background-color: #47160e;
-      // background: #785448;
       border: none;
       cursor: pointer;
 
