--- a/src/components/wish-list-item/wish-list-item.styles.scss
+++ b/src/components/wish-list-item/wish-list-item.styles.scss
@@ -6,9 +6,56 @@
 
   .img-anime-container {
     flex: 30%;
+    position: relative;
 
     img {
       width: 100%;
+    }
+
+    .img1 {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    .img2 {
+      z-index: 9;
+      width: 100%;
+      height: 100%;
+    }
+
+    .slide-out-top {
+      -webkit-animation: slide-out-top 0.5s
+        cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+      animation: slide-out-top 0.5s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+    }
+
+    @-webkit-keyframes slide-out-top {
+      0% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
+      }
+      100% {
+        -webkit-transform: translateY(-1000px);
+        transform: translateY(-1000px);
+        opacity: 0;
+      }
+    }
+
+    @keyframes slide-out-top {
+      0% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
+      }
+      100% {
+        -webkit-transform: translateY(-1000px);
+        transform: translateY(-1000px);
+        opacity: 0;
+      }
     }
   }
 
@@ -20,7 +67,8 @@
     padding-left: 2rem;
     font-weight: 300;
     font-size: 14px;
-    letter-spacing: .5px;
+    letter-spacing: 0.5px;
+    text-align: left;
 
     h2 {
       font-weight: 400;
@@ -29,6 +77,20 @@
     h3 {
       font-weight: 400;
       font-size: 16px;
+    }
+  }
+
+  .wish-item-to-cart {
+    align-self: center;
+    margin-left: 2rem;
+    button {
+      padding: 15px;
+      border: none;
+      background-color: #47160e;
+      cursor: pointer;
+      img {
+        width: 23px;
+      }
     }
   }
 }
