--- a/src/components/wish-list-item/wish-list-item.styles.scss
+++ b/src/components/wish-list-item/wish-list-item.styles.scss
@@ -14,7 +14,7 @@
 
     .img1 {
       width: 100%;
-      height: 100%;
+      // height: 100%;
       position: absolute;
       top: 0;
       left: 0;
@@ -23,7 +23,7 @@
     .img2 {
       z-index: 9;
       width: 100%;
-      height: 100%;
+      // height: 100%;
     }
 
     .slide-out-top {
