--- a/src/routes/tea/tea.styles.scss
+++ b/src/routes/tea/tea.styles.scss
@@ -29,18 +29,26 @@
 
   .filter-container {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
+    // background: red;
     margin: 5rem 0 2rem 0;
   }
 
   .filter-container-buttons {
     display: flex;
+    flex-direction: column;
     button {
       border: none;
       margin-right: 1rem;
       cursor: pointer;
       font-size: 14px;
       color: #47160e;
+      // background: green;
+
+      &:hover {
+        border-bottom: 0.4px solid #47160e;
+      }
     }
   }
 
