--- a/src/routes/navigation/nav-desktop.styles.scss
+++ b/src/routes/navigation/nav-desktop.styles.scss
@@ -40,7 +40,10 @@
       align-items: center;
 
       .user-icon {
-        padding-top: 3.5px;
+        padding-top: 3.6px;
+      }
+      .user-icon {
+        margin-top: 1px;
       }
 
       img {
@@ -55,13 +58,11 @@
   }
 
   .bottom-level-navigation {
-    // background: red;
     height: 3.5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 2rem;
-    // background: pink;
 
     & {
       color: #543019;
@@ -81,8 +82,6 @@
     }
 
     .bottom-level-navigation-right {
-      // background: blue;
-
       display: flex;
 
       .stores-search {
