--- a/src/components/slide-show-hover/slide-show-hover.styles.scss
+++ b/src/components/slide-show-hover/slide-show-hover.styles.scss
@@ -2,6 +2,8 @@
   margin-top: 10rem;
   background: #dad7a7;
   background: #E2E2AE;
+  background: #C1B492;
+  background: #DEDCCB;
   //   border: 1px solid brown;
 
   height: 40rem;
