align ahopping cart anf heart wish icon

--- a/src/components/shopping-cart/shopping-cart.styles.scss
+++ b/src/components/shopping-cart/shopping-cart.styles.scss
@@ -6,6 +6,10 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  
+  img {
+    padding-top: 1.8px;
+  }
 
   .item-count {
     position: absolute;
