--- a/src/components/shopping-cart-item-order/shopping-cart-item-order.styles.scss
+++ b/src/components/shopping-cart-item-order/shopping-cart-item-order.styles.scss
@@ -98,3 +98,22 @@
     }
   }
 }
+
+
+@media screen and (max-width: 1024px) { 
+  .cart-item-container-bag {
+    // border: 1px solid rgb(225, 225, 225);
+    // line-height: 1.6;
+    // min-height: 220px;
+
+    margin-left: 0;
+  //   padding: 2rem;
+  //   color: #3d2928;
+  //   letter-spacing: 0.8px;
+  //   font-size: 12.2px;
+  //   display: flex;
+  //   flex-direction: column;
+  //   margin-bottom: 1rem;
+  }
+
+}
