--- a/src/routes/classic-tea/classic-tea.styles.scss
+++ b/src/routes/classic-tea/classic-tea.styles.scss
@@ -1,4 +1,4 @@
-.real-life-tea-container {
+.classic-tea-container {
   text-align: center;
 
   h2 {
@@ -37,5 +37,33 @@
   .tea-section-catalogue {
     display: grid;
     grid-template-columns: 33% 33% 33%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .classic-tea-container {
+    text-align: center;
+
+    h2 {
+      margin-top: 2rem;
+      margin-bottom: 1rem;
+      font-size: 1.8rem;
+    }
+
+    p {
+      width: 90%;
+      font-size: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    img {
+      width: 60px;
+    }
+
+    .classic-page-bg {
+      height: 10rem;
+      margin-bottom: 2rem;
+    }
+
   }
 }
