--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -53,14 +53,26 @@
     }
   }
 
+  &.checkout {
+    width: 31.5%;
+    margin: 0 auto 2rem auto;
+    &:hover {
+      background-color: white;
+      color: black;
+      border: 1px solid #532c12;
+    }
+  }
+
   &.wide {
     width: 100%;
     letter-spacing: 1px;
+    border: none;
 
     &:hover {
       background-color: white;
       color: black;
       border: 1px solid #532c12;
+      border: none;
     }
   }
 }
