--- a/src/components/checkout/checkout.styles.scss
+++ b/src/components/checkout/checkout.styles.scss
@@ -26,6 +26,7 @@
       background-position: center;
       background-size: contain;
       background-repeat: no-repeat;
+
     }
 
     .checkout-process {
@@ -36,6 +37,7 @@
       display: flex;
       justify-content: center;
       color: #27160e;
+      // background: red;
 
       .checkout-process-dollar {
         font-size: 32px;
@@ -73,7 +75,7 @@
 
       .coupon-input-container {
         display: flex;
-        background: green;
+        // background: green;
 
         input {
           border: 1px solid rgb(225, 225, 225);
@@ -153,6 +155,54 @@
         font-weight: 300;
         font-family: 'Poppins', sans-serif;
       }
+    }
+  }
+}
+
+
+
+
+@media screen and (max-width: 1024px) {
+  .checkout-bag {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    // background: pink;
+  
+
+  
+    h2 {
+      margin: 2rem 0;
+      font-size: 2rem;
+    }
+
+    .checkout-bag-container {
+      grid-template-columns: 100%;
+      margin: auto;
+
+
+    .checkout-bag-empty-bg {
+      height: 0;
+      width: 0;
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+     
+    }
+
+    .checkout-process {
+      padding: 0;
+      height: 30rem;
+      width: 100%;
+
+      img {
+        width: 90%;
+      }
+
+      .checkout-process-containe {
+        background: red;
+      }
+
+    }
     }
   }
 }
