--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -75,6 +75,8 @@ footer {
 
 @media screen and (max-width: 1024px) {
   footer {
+    margin-top: 0;
+    padding: 1rem;
     h3 {
       font-size: 20px;
       font-weight: 400;
@@ -82,7 +84,20 @@ footer {
     }
 
     .real-life-page-bg {
-      display: block;
+      background-position: 400% 190%;
     }
+
+    h3 {
+      font-size: 1rem;
+      margin-left: 0;
+ 
+    }
+    li {
+      list-style-type: none;
+      color: #27160e;
+      font-weight: 300;
+      font-size: 9px;
+    }
+  
   }
 }
