--- a/src/components/home-text-intro/home-text-intro.styles.scss
+++ b/src/components/home-text-intro/home-text-intro.styles.scss
@@ -11,3 +11,18 @@
     line-height: 1.7;
   }
 }
+
+
+@media screen and (max-width: 900px) {
+  .home-text-intro-container {
+    width: 100%;
+    margin: 3rem auto;
+
+
+    h3 {
+    width: 80%;
+    margin: auto;
+      font-size: 1rem;
+    }
+  }
+}
