--- a/src/components/promotions-item/promotions-item.scss
+++ b/src/components/promotions-item/promotions-item.scss
@@ -28,7 +28,7 @@
   .promotion-card-bg {
     height: 100%;
     background-position: bottom;
-    background-size:contain;
+    background-size: contain;
     background-repeat: no-repeat;
     width: 100%;
     // margin: auto;
@@ -57,6 +57,41 @@
       background-color: white;
       color: rgb(84, 48, 25);
       border: 1px solid #785448;
+    }
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .promotions-item-container {
+    display: block;
+    text-align: center;
+    max-height: 500px;
+    overflow-y: hidden;
+    // background: red;
+    // margin-bottom: 0;
+
+    h4 {
+      font-size: 1.4rem;
+    }
+
+    p {
+      width: 80%;
+      margin: auto;
+    }
+
+    .promotion-card-bg {
+      height: 40%;
+      background-position: bottom;
+      background-size: contain;
+      background-repeat: no-repeat;
+      width: 100%;
+      // margin: auto;
+      opacity: 0.3;
+    }
+
+    button {
+      margin: auto;
+      transform: translateY(-7rem);
     }
   }
 }
