--- a/src/components/promotions/promotions.styles.scss
+++ b/src/components/promotions/promotions.styles.scss
@@ -32,3 +32,33 @@
     column-gap: 3rem;
   }
 }
+
+
+
+@media screen and (max-width: 900px) {
+  .home-promotions-container {
+    // background: red;
+    width: 100%;
+    // padding: 0 2rem;
+    margin: 2rem auto;
+    .home-promotions-header {
+      .line {
+        height: 1.4px;
+        width: 5rem;
+        background-color: #9b9b9b;
+      }
+  
+      h1 {
+        font-size: 1.5rem;
+      }
+    }
+
+    .home-promotions-cards {
+      margin-top: 2rem;
+      grid-template-columns: 1fr;
+      column-gap: 1rem;
+    }
+    
+  }
+}
+
