--- a/src/components/tea-selections-card/tea-selections-card.styles.scss
+++ b/src/components/tea-selections-card/tea-selections-card.styles.scss
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
 
+
   position: relative;
   color: white;
 
@@ -22,5 +23,20 @@
     letter-spacing: 1px;
     font-weight: 300;
     font-family: 'IBM Plex Serif', serif;
+  }
+}
+
+
+@media screen and (max-width: 900px) {
+  .selections-item-container {
+    height: 180px;
+
+    h3 {
+      position: absolute;
+      width: 50%;
+      // padding: 0;
+      font-size: 1.2rem;
+
+    }
   }
 }
