--- a/src/routes/personal-account/personal-account.styles.scss
+++ b/src/routes/personal-account/personal-account.styles.scss
@@ -94,17 +94,61 @@
       .orders-container {
         text-align: left;
 
+        .order-header {
+          // border-bottom: 1px solid rgb(225, 225, 225);
+          // width: 40%;
+        }
+
         .order {
           margin-bottom: 2rem;
           padding-bottom: 1rem;
           border-bottom: 1px dotted rgb(225, 225, 225);
 
+          ol {
+            padding-left: 2rem;
+          }
+
+          .orders-items {
+            // background: red;
+          }
           .side-headers {
-            font-weight: 700;
+            font-weight: 500;
+            letter-spacing: 1.2px;
+          }
+
+          .item {
+            letter-spacing: 2px;
+          }
+
+          .order {
+            text-decoration: underline;
           }
         }
+      }
+    }
+  }
+}
 
-      
+@media screen and (max-width: 1024px) {
+  .personal-account-container {
+    margin: 0;
+    margin-top: 3rem;
+    h2 {
+      display: none;
+    }
+    .personal-account-wrapper {
+      flex-direction: column;
+
+      .personal-account-navigation {
+        width: 90%;
+        margin: auto;
+        margin-bottom: 1rem;
+      }
+
+      .personal-account-display {
+        padding: 0.5rem;
+        width: 85%;
+        margin: auto;
       }
     }
   }
