--- a/src/routes/picked-tea/picked-tea.styles.scss
+++ b/src/routes/picked-tea/picked-tea.styles.scss
@@ -136,13 +136,6 @@
         letter-spacing: 0.8px;
         font-size: 15px;
 
-        p {
-          // width: 85%;
-          // line-height: 1.7;
-          // padding-bottom: 30px;
-          // border-bottom: 1px solid #e1e1e1;
-        }
-
         .picked-tea-consist {
           width: 100%;
 
@@ -186,6 +179,122 @@
             margin-top: 1rem;
             font-weight: 200;
             font-size: 18px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .picked-tea {
+    margin: 2rem auto;
+
+    .picked-tea-title-container {
+      display: flex;
+      flex-direction: column;
+
+      h2 {
+        font-size: 1.5rem;
+        margin: 0;
+      }
+
+      button {
+        border: none;
+      }
+    }
+
+    .picked-tea-container {
+      display: grid;
+      grid-template-columns: 1fr;
+      column-gap: 10px;
+      margin: 0;
+      padding: 0;
+
+      .axis-horizontal {
+        height: 25rem;
+        width: 50%;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+      }
+
+      .thumbs-wrapper {
+        width: 100%;
+        margin-bottom: 2rem;
+      }
+
+      .control-arrow {
+        display: none;
+      }
+
+      .carousel {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+
+        img {
+          width: 100%;
+        }
+
+        .control-dots {
+          display: flex;
+          justify-content: center;
+        }
+
+        .thumbs {
+          display: flex;
+
+          .thumb {
+            display: none;
+          }
+
+          .selected {
+            border: 1px solid #d1cccc;
+
+            img {
+              height: 100%;
+            }
+          }
+        }
+      }
+
+      .carousel-slider {
+        height: 15rem;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+      }
+
+      .picked-tea-right-col {
+        padding: 2rem;
+
+        .product-card-footer {
+          width: 100%;
+        }
+
+        .picked-tea-description {
+          .picked-tea-consist {
+            width: 100%;
+
+            h4 {
+              margin-top: 1rem;
+              font-weight: 200;
+              font-size: 18px;
+            }
+
+            .picked-tea-consist-items {
+              grid-template-columns: 1fr 1fr;
+              row-gap: 1rem;
+              column-gap: 5rem;
+            }
+          }
+
+          .picked-tea-taste {
+            h4 {
+              margin-top: 0.8rem;
+              font-size: 15px;
+            }
           }
         }
       }
