--- a/src/routes/relaxing-tea/relaxing-tea.styles.scss
+++ b/src/routes/relaxing-tea/relaxing-tea.styles.scss
@@ -1,12 +1,68 @@
-.real-life-tea-container {
-  margin-bottom: 5rem;
+.relaxing-tea-container {
+  text-align: center;
+
+  h2 {
+    margin: 10rem 0 5rem 0;
+    font-size: 2.5rem;
+    font-weight: 300;
+    text-align: center;
+    color: #27160e;
+  }
+
+  p {
+    width: 60%;
+    margin: auto;
+    letter-spacing: 0.8px;
+    font-size: 25px;
+    font-weight: 300;
+    margin-bottom: 3rem;
+  }
+
+  .relaxing-tea-page-bg {
+    height: 20rem;
+    background-position: bottom;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 94.5%;
+    margin: auto;
+
+    .gradient-styled {
+      width: 100%;
+      height: 100%;
+      background: rgba(43, 10, 10, 0.5);
+    }
+    margin-bottom: 3rem;
+  }
+
+  .tea-section-catalogue {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+  }
 }
 
-.relaxing-tea-page-bg {
-  height: 20rem;
-  background-position: bottom;
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 94.5%;
-  margin: auto;
+@media (max-width: 1024px) {
+  .relaxing-tea-container {
+    text-align: center;
+
+    h2 {
+      margin-top: 2rem;
+      margin-bottom: 1rem;
+      font-size: 1.8rem;
+    }
+
+    p {
+      width: 90%;
+      font-size: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    img {
+      width: 60px;
+    }
+
+    .relaxing-tea-page-bg {
+      height: 10rem;
+      margin-bottom: 2rem;
+    }
+  }
 }
